--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
@@ -17,27 +17,27 @@ and open the template in the editor.
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22chocolate%22%20width%3D%2227%2E27273%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2227%2E27273%25%22%20fill%3D%22%23dd8e56%22%20width%3D%229%2E09091%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2236%2E36364%25%22%20fill%3D%22chocolate%22%20width%3D%2227%2E27273%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2263%2E63636%25%22%20fill%3D%22%23dd8e56%22%20width%3D%229%2E09091%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2272%2E72727%25%22%20fill%3D%22chocolate%22%20width%3D%2227%2E27273%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E"); }
 
 /* line 17, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-.l-constrained, .l-branding, .l-menu, .l-highlighted, .l-content, .l-useful-link, .l-copyright {
+.l-constrained, .l-branding, .l-heading, .l-highlighted, .l-content, .l-useful-link, .l-copyright {
   max-width: 960px;
   margin: 0 auto;
   *zoom: 1; }
   /* line 38, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/general/_clearfix.scss */
-  .l-constrained:after, .l-branding:after, .l-menu:after, .l-highlighted:after, .l-content:after, .l-useful-link:after, .l-copyright:after {
+  .l-constrained:after, .l-branding:after, .l-heading:after, .l-highlighted:after, .l-content:after, .l-useful-link:after, .l-copyright:after {
     content: "";
     display: table;
     clear: both; }
 
 /* line 27, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-.l-header, .l-main, .l-footer {
+.l-main, .l-footer {
   margin: 1.5em 0; }
 
 /* line 31, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-.l-branding {
-  text-align: center; }
-
-/* line 35, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-.wrapper--highlighted {
-  background: rgba(142, 150, 160, 0.75);
-  padding: 1.5em 1em; }
+.l-heading {
+  background: url(../../../images/banner.jpg) center 0 no-repeat;
+  width: 100%;
+  height: 220px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px; }
 
 /*# sourceMappingURL=sword-front.layout.no-query.css.map */
