--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -8,6 +8,9 @@ and open the template in the editor.
     Author     : Stephen
 */
 .block--quicktabs-search-tabs {
+    margin-top: 10%;
+    margin-left: 10%;
+    
     ul.quicktabs-tabs {
         padding: 0;
         margin: 0;
